2005-11-03  Vincent Noel <vnoel@cox.net>

	* info.c: (loginfo_repaint), (loginfo_quit), (loginfo_close),
	(loginfo_new), (loginfo_show):
	* info.h:
	* log_repaint.c: (row_toggled_cb):
	* logview.c: (logview_window_new):
	* logview.h:
	* main.c: (main): Cleanups.

	* info.c (loginfo_repaint): Don't crash when requesting properties
	for a dateless log.

2005-11-03  Vincent Noel <vnoel@cox.net>

	Remove a few now-useless functions. Cleanup.

	* loglist.c: (loglist_find_log_from_name),
	(loglist_select_log_from_name), (loglist_selection_changed):
	* logrtns.c: (file_is_zipped):
	* logview.c: (logview_get_active_log), (logview_get_loglist),
	(logview_count_logs), (logview_select_log),
	(logview_menus_set_state), (logview_set_window_title),
	(logview_save_prefs), (logview_destroy), (logview_add_log),
	(logview_close_log), (window_size_changed_cb), (logview_init),
	(logview_window_new):
	* logview.h:
	* misc.c: (date_get_string):
	* misc.h:

	* logrtns.c (file_is_zipped): Small memory leak.

2005-11-03  Vincent Noel <vnoel@cox.net>

	* Makefile.am:
	* logview.c: (logview_destroy):
	* logview.h:
	* main.c: (logview_init_options), (save_session), (die), (main):
	New. Factor the logview out in its own widget and module, seperate
	from the main module.

2005-11-03  Vincent Noel <vnoel@cox.net>

	* Makefile.am:
	* loglist.c: (loglist_get_log_iter), (loglist_find_log_from_name),
	(loglist_unbold_log), (loglist_bold_log),
	(loglist_select_log_from_name), (loglist_remove_log),
	(loglist_add_log), (loglist_selection_changed), (loglist_connect),
	(loglist_init), (loglist_class_init), (loglist_get_type),
	(loglist_new):
	* loglist.h: New. Factor the loglist out in its own widget and module.
	
	* logrtns.c: (log_unbold):
	* logrtns.h:
	* logview.c: (logview_destroy), (logview_select_log_from_name),
	(logview_add_log), (logview_add_logs_from_names), (main),
	(logview_find_log_from_name), (logview_init), (logview_close_log),
	(logview_file_selected_cb), (logview_set_window_title),